@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.6 2003/11/10 02:03:17 xtraeme Exp $
+$NetBSD: distinfo,v 1.7 2003/12/16 02:25:45 ben Exp $
 
-SHA1 (gqview-1.3.5.tar.gz) = c5140623a2ba153697c3843a91d3af9b39d0c8ba
-Size (gqview-1.3.5.tar.gz) = 1062019 bytes
+SHA1 (gqview-1.3.6.tar.gz) = 8311c65f371db76953b02a1f03a8e2dd4d8a9df6
+Size (gqview-1.3.6.tar.gz) = 1072380 bytes
